QPID-5228: allow alternate exchange to be set on 1.0 subscription queues

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1532306 13f79535-47bb-0310-9956-ffa450edef68